syntax = "proto3";

package org.example.grpc;

option java_multiple_files = true;
option java_package = "org.example.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc setUser(User) returns (UserIdx);
  rpc getUser(UserIdx) returns (User);
}

message User {
  int64 idx = 1;
  string username = 2;
  string email = 3;
  repeated string roles = 4;
}

message UserIdx {
  int64 idx = 1;
}